--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ img{
     background-position:center top;
 }
 #home{
-    background-image: url(../main-bg.jpg);
+    background-image: url(../images/main-bg.jpg);
     background-blend-mode:luminosity ;
     min-height:100vh;
 }
@@ -94,7 +94,7 @@ img{
 /* NEWS
 -------------------*/
 #news {
-    background-image:url(../news-bg.jpg);
+    background-image:url(../images/news-bg.jpg);
     height:270px;
     margin-bottom:40px;
 }
@@ -316,7 +316,7 @@ aside p {
 /* MENU
 -------------------------*/
 #menu {
-    background-image: url(../menu-bg.jpg);
+    background-image: url(../images/menu-bg.jpg);
     min-height: 100vh;
 }
 .menu-content {
@@ -353,7 +353,7 @@ aside p {
 /* CONTACT
 -------------------------*/
 #contact {
-    background-image: url(../contact-bg.jpg);
+    background-image: url(../images/contact-bg.jpg);
     min-height: 100vh;
 }
 
