--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ img{
     background-position:center top;
 }
 #home{
-    background-image: url(../main-bg.jpg);
+    background-image: url(../images/main-bg.jpg);
     background-blend-mode:luminosity ;
     min-height:100vh;
 }
