--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ img{
     background-position:center top;
 }
 #home{
-    background-image: url(../images/main-bg.jpg);
+    background-image: url(../main-bg.jpg);
     background-blend-mode:luminosity ;
     min-height:100vh;
 }
@@ -94,7 +94,7 @@ img{
 /* NEWS
 -------------------*/
 #news {
-    background-image:url(../news-bg.jpg);
+    background-image: url(../news-bg.jpg);
     height:270px;
     margin-bottom:40px;
 }
