--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ img{
 /* NEWS
 -------------------*/
 #news {
-    background-image: url(../news-bg.jpg);
+    background-image: url("https://github.com/iiickw/cafe/blob/main/main-bg.jpg?raw=true");
     height:270px;
     margin-bottom:40px;
 }
